--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-apply plugin: "androidx.navigation.safeargs"
+apply plugin: 'androidx.navigation.safeargs'
 
 android {
     compileSdkVersion 28
@@ -17,16 +17,22 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    buildToolsVersion '28.0.0'
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.0.0-alpha3'
-    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0-alpha1"
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
-    implementation "androidx.room:room-runtime:2.0.0-alpha1"
-    annotationProcessor "androidx.room:room-compiler:2.0.0-alpha1"
-    implementation "android.arch.navigation:navigation-fragment:1.0.0-alpha02"
-    implementation "android.arch.navigation:navigation-ui:1.0.0-alpha02"
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:appcompat-v7:28.0.0-alpha3' //androidx.appcompat:appcompat
+    implementation 'android.arch.lifecycle:extensions:1.1.1' //androidx.lifecycle:lifecycle-extensions
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2' //androidx.constraintlayout:constraintlayout
+    implementation 'android.arch.persistence.room:runtime:1.1.1' //androidx.room:room-runtime
+    annotationProcessor 'android.arch.persistence.room:compiler:1.1.1' //androidx.room:room-compiler
+    implementation 'android.arch.navigation:navigation-fragment:1.0.0-alpha02' //no androidx equivalent yet .__.
+    implementation 'android.arch.navigation:navigation-ui:1.0.0-alpha02' //no androidx equivalent yet .__.
+    implementation 'com.android.support:design:28.0.0-alpha3' //com.google.android.material:material
     testImplementation 'junit:junit:4.12'
 }
