--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath 'com.android.tools.build:gradle:3.2.0-alpha18'
         classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-alpha02"
         
 
