--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 /build
 /captures
 .externalNativeBuild
+.idea/statistic.xml
+.idea/caches/build_file_checksums.ser
+.idea/
 
 # Built application files
 *.apk
@@ -49,7 +52,7 @@ captures/
 
 # Keystore files
 # Uncomment the following line if you do not want to check your keystore files in.
-#*.jks
+*.jks
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
